force-app/main/default/objects/Opportunity/fields/Accept_Reminder_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Accept_Reminder_Deadline__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Accept Reminder Deadline</label>
    <type>DateTime</type>
</CustomField>