force-app/main/default/objects/Opportunity/fields/AcceptDeadlineRecalc__c.field-meta.xml
<CustomField>
    <fullName>AcceptDeadlineRecalc__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do we want to recalculate the Accept Deadline for this opportunity (assuming that the stage is correct)?</inlineHelpText>
    <label>Accept Deadline Recalc</label>
    <type>Checkbox</type>
</CustomField>