force-app/main/default/objects/Opportunity/fields/acd_name__c.field-meta.xml
<CustomField>
    <fullName>acd_name__c</fullName>
    <description>originally on task then on referral when NSR created referral then pushed to opty
case #22293852</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ACD Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>