force-app/main/default/objects/Opportunity/fields/ACH_Monthly_Volume__c.field-meta.xml
<CustomField>
    <fullName>ACH_Monthly_Volume__c</fullName>
    <label>ACH Monthly Volume</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>