force-app/main/default/objects/Opportunity/fields/Active_Employees__c.field-meta.xml
<CustomField>
    <fullName>Active_Employees__c</fullName>
    <label>Employees Active*-</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>