force-app/main/default/objects/Opportunity/fields/Admin_Fee_Discount__c.field-meta.xml
<CustomField>
    <fullName>Admin_Fee_Discount__c</fullName>
    <label>Admin Fee Discount</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>