force-app/main/default/objects/Opportunity/fields/Age_Excluding_Weekends__c.field-meta.xml
<CustomField>
    <fullName>Age_Excluding_Weekends__c</fullName>
    <formula>CASE(MOD( DATEVALUE(CreatedDate) - DATE(1985,6,24),7), 
0 , CASE( MOD( If(isnull(Sales_Cycle_End_Date__c),today(),Sales_Cycle_End_Date__c)
- DATEVALUE(CreatedDate) ,7),1,1,2,2,3,3,4,4,5,4,6,4,0), 
1 , CASE( MOD( If(isnull(Sales_Cycle_End_Date__c),today(),Sales_Cycle_End_Date__c)
- DATEVALUE(CreatedDate) ,7),1,1,2,2,3,3,4,3,5,3,6,4,0), 
2 , CASE( MOD( If(isnull(Sales_Cycle_End_Date__c),today(),Sales_Cycle_End_Date__c)
- DATEVALUE(CreatedDate) ,7),1,1,2,2,3,2,4,2,5,3,6,4,0), 
3 , CASE( MOD( If(isnull(Sales_Cycle_End_Date__c),today(),Sales_Cycle_End_Date__c)
- DATEVALUE(CreatedDate) ,7),1,1,2,1,3,1,4,2,5,3,6,4,0), 
4 , CASE( MOD( If(isnull(Sales_Cycle_End_Date__c),today(),Sales_Cycle_End_Date__c)
- DATEVALUE(CreatedDate) ,7),1,0,2,0,3,1,4,2,5,3,6,4,0), 
5 , CASE( MOD( If(isnull(Sales_Cycle_End_Date__c),today(),Sales_Cycle_End_Date__c)
- DATEVALUE(CreatedDate) ,7),1,0,2,0,3,1,4,2,5,3,6,4,0), 
6 , CASE( MOD( If(isnull(Sales_Cycle_End_Date__c),today(),Sales_Cycle_End_Date__c)
- DATEVALUE(CreatedDate) ,7),1,0,2,1,3,2,4,3,5,4,6,4,0), 
999) 
+ 
(FLOOR(( If(isnull(Sales_Cycle_End_Date__c),today(),Sales_Cycle_End_Date__c)
- DATEVALUE(CreatedDate) )/7)*5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age Excluding Weekends</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>