force-app/main/default/objects/Opportunity/fields/Agreed_to_Testimonial__c.field-meta.xml
<CustomField>
    <fullName>Agreed_to_Testimonial__c</fullName>
    <label>Agreed to Testimonial</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>