force-app/main/default/objects/Opportunity/fields/Amount_Backup__c.field-meta.xml
<CustomField>
    <fullName>Amount_Backup__c</fullName>
    <label>Amount Backup</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>