force-app/main/default/objects/Opportunity/fields/Assign_HRG__c.field-meta.xml
<CustomField>
    <fullName>Assign_HRG__c</fullName>
    <defaultValue>false</defaultValue>
    <description>trigger for HRG Assignment process</description>
    <label>Assign HRG</label>
    <type>Checkbox</type>
</CustomField>