force-app/main/default/objects/Opportunity/fields/Bank_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Bank_Lead_ID__c</fullName>
    <description>Used to track opportunities referred by Bankers and are tracked in LTS</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>