force-app/main/default/objects/Opportunity/fields/Bank_Product_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Bank_Product_of_Interest__c</fullName>
    <description>Field to be used to store the original product of interest for incoming bank leads.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Field to be used to store the original product of interest for incoming bank leads.</inlineHelpText>
    <label>3rd Party Product of Interest</label>
    <length>128</length>
    <type>Text</type>
</CustomField>