force-app/main/default/objects/Opportunity/fields/Bank_Referral_Fee__c.field-meta.xml
<CustomField>
    <fullName>Bank_Referral_Fee__c</fullName>
    <description>Entered by Corporate Commissions to calculate payment to bank on referrals</description>
    <formula>Referral_Contact__r.Referral_Account__r.Bank_Referral_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>3rd Party Referral Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>