force-app/main/default/objects/Opportunity/fields/Bank_Revenue_Percent__c.field-meta.xml
<CustomField>
    <fullName>Bank_Revenue_Percent__c</fullName>
    <description>Entered by Corporate Commissions to calculate payment to bank on referrals</description>
    <formula>Referral_Contact__r.Referral_Account__r.Bank_Revenue_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>3rd Party Revenue %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>