force-app/main/default/objects/Opportunity/fields/BranchClientNumber__c.field-meta.xml
<CustomField>
    <fullName>BranchClientNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The payroll branch client number.</inlineHelpText>
    <label>Branch-Client Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>