force-app/main/default/objects/Opportunity/fields/Business_Profiles__c.field-meta.xml
<CustomField>
    <fullName>Business_Profiles__c</fullName>
    <formula>Account.Business_Profile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Profiles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>