force-app/main/default/objects/Opportunity/fields/Cadence_Touchpoint__c.field-meta.xml
<CustomField>
    <fullName>Cadence_Touchpoint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cadence Touchpoint</label>
    <referenceTo>Cadence_Touchpoint__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>