force-app/main/default/objects/Opportunity/fields/CampaignActivityId__c.field-meta.xml
<CustomField>
    <fullName>CampaignActivityId__c</fullName>
    <description>Populated via the TaskHelper class if this field is populated due to a campaign associated with a task.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Campaign Activity Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>