force-app/main/default/objects/Opportunity/fields/Chatter_Manager_SLA__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Manager_SLA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chatter Manager SLA</label>
    <type>Checkbox</type>
</CustomField>