force-app/main/default/objects/Opportunity/fields/CheckIfCloned__c.field-meta.xml
<CustomField>
    <fullName>CheckIfCloned__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if this is a cloned opportunity</inlineHelpText>
    <label>Check If Cloned</label>
    <type>Checkbox</type>
</CustomField>