force-app/main/default/objects/Opportunity/fields/Child_ID__c.field-meta.xml
<CustomField>
    <fullName>Child_ID__c</fullName>
    <label>Child ID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>