force-app/main/default/objects/Opportunity/fields/Child_Unit__c.field-meta.xml
<CustomField>
    <fullName>Child_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DSA checks this box if opportunity is a child of another opportunity.  Use this if no separate presentation was made apart from the parent presentation.</description>
    <label>Child Unit</label>
    <type>Checkbox</type>
</CustomField>