force-app/main/default/objects/Opportunity/fields/Client_Reference_Provided__c.field-meta.xml
<CustomField>
    <fullName>Client_Reference_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box is used by the VOC team to track Opportunities where a client reference was requested by the sales rep.</description>
    <inlineHelpText>A Client Reference was requested for this prospect.</inlineHelpText>
    <label>Client Reference Provided</label>
    <type>Checkbox</type>
</CustomField>