force-app/main/default/objects/Opportunity/fields/Client_Referral__c.field-meta.xml
<CustomField>
    <fullName>Client_Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Account object to client who is referring this opportunity</description>
    <inlineHelpText>Enter the Name of the Prospect-Client who referred this opportunity, then click the magnifying glass icon to complete the association.</inlineHelpText>
    <label>Client Referral</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referred Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>