force-app/main/default/objects/Opportunity/fields/ClientTracking__c.field-meta.xml
<CustomField>
    <fullName>ClientTracking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Used for tracking onboarding and registration of the client</inlineHelpText>
    <label>Client Registration Tracking</label>
    <referenceTo>CSO_Tracking__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>