force-app/main/default/objects/Opportunity/fields/Compliance_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Revenue__c</fullName>
    <label>Compliance Revenue*-</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>