force-app/main/default/objects/Opportunity/fields/Consent_to_Text__c.field-meta.xml
<CustomField>
    <fullName>Consent_to_Text__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent to Text</label>
    <type>Checkbox</type>
</CustomField>