force-app/main/default/objects/Opportunity/fields/Consent_to_Text_Date__c.field-meta.xml
<CustomField>
    <fullName>Consent_to_Text_Date__c</fullName>
    <description>APR0171000: Used to update Consent to Text Date from Contact</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Consent to Text Date</label>
    <type>DateTime</type>
</CustomField>