force-app/main/default/objects/Opportunity/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <description>Enter the First and Last name of the Contact for the WAR Presentation Report</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>