force-app/main/default/objects/Opportunity/fields/Conversion_Reason__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Reason__c</fullName>
    <label>Conversion Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Needed functionality not available in TLO</fullName>
            </value>
            <value>
                <fullName>TLO Product Instability</fullName>
            </value>
            <value>
                <fullName>TLO UI not meeting Current Needs</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>