force-app/main/default/objects/Opportunity/fields/Core_Branch_Client_Number__c.field-meta.xml
<CustomField>
    <fullName>Core_Branch_Client_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Format should be BB-CCCCCCCC or BBB-CCCCCCCC where B is the Core, PBS or Advantage Branch Number and C is the Client Number</inlineHelpText>
    <label>Core Branch-Client Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>