force-app/main/default/objects/Opportunity/fields/Core_Conversion_Reason__c.field-meta.xml
<CustomField>
    <fullName>Core_Conversion_Reason__c</fullName>
    <description>Description of why client requires a Pre Sale Approva</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Core Conversion Reason</label>
    <length>125</length>
    <type>Text</type>
</CustomField>