force-app/main/default/objects/Opportunity/fields/Created_Time_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Created_Time_Bucket__c</fullName>
    <description>using Workflow, look at Created_Date_Time__c and based on the hour put it into a bucket
Case #21750204</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Created Time Bucket</label>
    <length>40</length>
    <type>Text</type>
</CustomField>