force-app/main/default/objects/Opportunity/fields/CS_CM_Med_UW_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>CS_CM_Med_UW_Decision_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CS CM Med UW Decision Date</label>
    <type>DateTime</type>
</CustomField>