force-app/main/default/objects/Opportunity/fields/CSO_Eligible__c.field-meta.xml
<CustomField>
    <fullName>CSO_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this opportunity eligible for CSO based on the record type, opportunity type, and the attributes of the user who created it? This is not based on the product selection or knockouts, just on its state at creation.</inlineHelpText>
    <label>Is CSO Eligible?</label>
    <type>Checkbox</type>
</CustomField>