force-app/main/default/objects/Opportunity/fields/Current_Pricing_Category__c.field-meta.xml
<CustomField>
    <fullName>Current_Pricing_Category__c</fullName>
    <label>Current Pricing Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Lodging</fullName>
            </value>
            <value>
                <fullName>MOTO</fullName>
            </value>
            <value>
                <fullName>Restaurant</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Supermarket</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>