force-app/main/default/objects/Opportunity/fields/Current_SMS_Owner__c.field-meta.xml
<CustomField>
    <fullName>Current_SMS_Owner__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current SMS Owner</label>
    <length>80</length>
    <type>Text</type>
</CustomField>