force-app/main/default/objects/Opportunity/fields/Customer_Success_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Customer_Success_Criteria__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Success Criteria</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>