force-app/main/default/objects/Opportunity/fields/Date_Last_Updated_From_SF1__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_Updated_From_SF1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Last Updated From SF1</label>
    <type>Date</type>
</CustomField>