force-app/main/default/objects/Opportunity/fields/Date_Lead_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Lead_Submitted__c</fullName>
    <description>Date bank lead was received</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Lead Submitted</label>
    <type>Date</type>
</CustomField>