force-app/main/default/objects/Opportunity/fields/Days_to_Quote_Complete__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Quote_Complete__c</fullName>
    <description>Quote Completed Date - Quote Submitted Date (excluding weekends)</description>
    <formula>Quote_Completed_Date__c - Quote_Submitted_Date__c- 2*( floor((Quote_Completed_Date__c - DATE(1985, 6, 24))/7) - floor((Quote_Submitted_Date__c- DATE(1985, 6, 24))/7))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Quote Completed Date - Quote Submitted Date (excluding weekends)</inlineHelpText>
    <label>Days to Quote Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>