force-app/main/default/objects/Opportunity/fields/Dental_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Dental_Carrier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dental Ins Carrier</label>
    <length>25</length>
    <type>Text</type>
</CustomField>