force-app/main/default/objects/Opportunity/fields/Did_a_FA_Refer_this_Plan__c.field-meta.xml
<CustomField>
    <fullName>Did_a_FA_Refer_this_Plan__c</fullName>
    <label>Did a FA Refer this Plan?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>