force-app/main/default/objects/Opportunity/fields/Discount2_Type__c.field-meta.xml
<CustomField>
    <fullName>Discount2_Type__c</fullName>
    <label>Discount2 Type*-</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WIN</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>National Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>