force-app/main/default/objects/Opportunity/fields/Discount_Period__c.field-meta.xml
<CustomField>
    <fullName>Discount_Period__c</fullName>
    <description>Number months to applied the discount given</description>
    <inlineHelpText>1-12 months</inlineHelpText>
    <label>Discount Period</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>WIN_Check__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>