force-app/main/default/objects/Opportunity/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <description>Corporate Commissions uses this to monitor and report back to banks where their referral is in our sales process.</description>
    <label>Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LOS</fullName>
            </value>
            <value>
                <fullName>NOS</fullName>
            </value>
            <value>
                <fullName>SDP</fullName>
            </value>
            <value>
                <fullName>SLD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>