force-app/main/default/objects/Opportunity/fields/DM__c.field-meta.xml
<CustomField>
    <fullName>DM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Decision Maker</description>
    <label>DM</label>
    <type>Checkbox</type>
</CustomField>