force-app/main/default/objects/Opportunity/fields/Employees_Paid_Per_Payroll__c.field-meta.xml
<CustomField>
    <fullName>Employees_Paid_Per_Payroll__c</fullName>
    <label>Employees Paid Per Payroll</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>