force-app/main/default/objects/Opportunity/fields/Enhanced_Package__c.field-meta.xml
<CustomField>
    <fullName>Enhanced_Package__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enhanced Package*-</label>
    <type>Checkbox</type>
</CustomField>