force-app/main/default/objects/Opportunity/fields/ESR__c.field-meta.xml
<CustomField>
    <fullName>ESR__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this opportunity for ESR?</inlineHelpText>
    <label>ESR</label>
    <type>Checkbox</type>
</CustomField>