force-app/main/default/objects/Opportunity/fields/Essentials_Units__c.field-meta.xml
<CustomField>
    <fullName>Essentials_Units__c</fullName>
    <description>Required for HRS revenue Reporting</description>
    <formula>IF ( HR_Essentials_S__c = True,
IF( ISPICKVAL(StageName, &quot;Charge Back&quot;),-1,1),
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Essentials Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>