force-app/main/default/objects/Opportunity/fields/Estimated_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Start_Date__c</fullName>
    <description>MMS Estimated Date Sales Rep expects the opportunity to Start</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Estimated Start Date*-</label>
    <type>Date</type>
</CustomField>