force-app/main/default/objects/Opportunity/fields/EUP_Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>EUP_Email_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if you don&apos;t want an automated email to be sent to the client 48 hours after your Initial Presentation</description>
    <inlineHelpText>Check this box if you don&apos;t want an automated email to be sent to the client 48 hours after your Initial Presentation</inlineHelpText>
    <label>EUP Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>