force-app/main/default/objects/Opportunity/fields/EvaluateProductGroup__c.field-meta.xml
<CustomField>
    <fullName>EvaluateProductGroup__c</fullName>
    <formula>OR(  EvaluateProductGroupOverride__c 
    ,AND( NOT(ISBLANK(AdditionalProductsOfInterest__c))
       , ReferralLookup__r.Referral_Partner__r.Evaluate_Product_Of_Interest__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Do we evaluate the Additional Products of Interest field?</inlineHelpText>
    <label>Evaluate Product Group</label>
    <type>Checkbox</type>
</CustomField>