force-app/main/default/objects/Opportunity/fields/EvaluateTerritory__c.field-meta.xml
<CustomField>
    <fullName>EvaluateTerritory__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>To evaluate which territory this Opportunity should be assigned to based on the owner of the Opp and the territory the user is assigned to.</inlineHelpText>
    <label>Evaluate Territory</label>
    <type>Checkbox</type>
</CustomField>