force-app/main/default/objects/Opportunity/fields/Field_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Field_Campaign__c</fullName>
    <description>To allow Sales Enablement to tag an Opportunity to its associated Campaign.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Field Campaign</label>
    <length>50</length>
    <type>Text</type>
</CustomField>