force-app/main/default/objects/Opportunity/fields/Financial_Underwriting__c.field-meta.xml
<CustomField>
    <fullName>Financial_Underwriting__c</fullName>
    <description>Created per Fast Track Case #25237950</description>
    <label>Financial Underwriting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Final</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>