force-app/main/default/objects/Opportunity/fields/First_Payroll_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>First_Payroll_Delivery_Method__c</fullName>
    <description>Case 23927387</description>
    <label>First Payroll Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Courier</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Online Only</fullName>
            </value>
            <value>
                <fullName>Rep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>