force-app/main/default/objects/Opportunity/fields/Flock__c.field-meta.xml
<CustomField>
    <fullName>Flock__c</fullName>
    <defaultValue>false</defaultValue>
    <description>populated when the Flock field on Reference Agency is populated</description>
    <inlineHelpText>populated when the Flock field on Reference Agency is populated</inlineHelpText>
    <label>Flock</label>
    <type>Checkbox</type>
</CustomField>