force-app/main/default/objects/Opportunity/fields/FSA_S__c.field-meta.xml
<CustomField>
    <fullName>FSA_S__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FSA (current payroll clients) OR FSA (non-payroll clients) OR FSA w/ Check Signing (current payroll clients) OR FSA w/ Check Signing (non-payroll clients)</description>
    <inlineHelpText>FSA (current  or non-payroll clients) or FSA w/ Check Signing (current or non-payroll clients)</inlineHelpText>
    <label>FSA-S*-</label>
    <type>Checkbox</type>
</CustomField>